[project]
name = "weestack-github-com"
version = "0.0.1"
description = "Alexander Høgh's personal website"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "mkdocs",
  "mkdocs-material",
  "mkdocs-redirects",
  "mkdocs-rss-plugin",
  "mkdocs-material-extensions",
  " mkdocs-jupyter",
  "mkdocs-git-revision-date-localized-plugin",
  "watchdog",
  "pillow",
  "cairosvg",
]
